# scraper-service

./: .gitignore  DEPLOYMENT.md  README.md  pyrightconfig.json  web-scraper.code-workspace
infra/: app.py  cdk.context.json  pyproject.toml
infra/infra/: infra_stack.py
web-scraper/: .env.example  .env.prod  .gitignore  CLAUDE.md  README.md  SCRAPER_TEMPLATE.md  SCRAPER_TEMPLATE.md.bak  context.md  controller.dockerfile  plan.md  prompt.txt  prompt2.txt  prompt3.txt  pyproject.toml  worker.dockerfile
web-scraper/notebooks/: maricopa.ipynb
web-scraper/scripts/: api  api_client.py  clear_dynamodb.py  deploy.sh  start.sh  test_parcels.jsonl  test_scraper.py
web-scraper/src/controller/: circuit_breaker.py  errors.py  main.py  models.py  scheduler.py  service.py
web-scraper/src/scrapers/: README.md  __init__.py  examples.py
web-scraper/src/scrapers/az/: maricopa.py
web-scraper/src/shared/: db.py  interfaces.py  models.py  queue.py  settings.py  storage.py  utils.py
web-scraper/src/worker/: main.py  models.py  registry.py  scraper.py
